# GradeManager

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  GradeManager.db  README.md  数据库建表.sql
src/: Account.cpp  Account.hpp  App.cpp  App.hpp  Export_db.cpp  Export_db.hpp  Grade.cpp  Grade.hpp  Sql_db.cpp  Sql_db.hpp  css.hpp  main.cpp
